--- a/style.css
+++ b/style.css
@@ -4,24 +4,12 @@ body {
 	position: relative;
 	background-color: #d1d1d1;
 }
-form {
-	float:right;
-	padding-right:20px;
-	margin-bottom:10px;
-}
-.main-container {
-	min-height: 100vh; /* will cover the 100% of viewport */
-	overflow: hidden;
-	display: block;
-	position: relative;
-	padding-bottom: 150px; /* height of your footer */
-}
 footer {
 	background-color:#777;
 	margin:0px;
 	padding: 0px;
 	position: absolute;
-	height:35px;
+	height:40px;
 	bottom: 0;
 	width: 100%;
 	text-align: center;
@@ -45,19 +33,51 @@ color: white;
 a:visited {
 color: white;
 }
-#submitlogin {
-	padding-right:50px;
+#normallink {
+	
+}
+#banner {
+	background-color:#000000;
+	height:90px;
 }
 #headspan {
-	width: 85%;
+	width: 80%;
 	float:left;
 }
 #loginbox {
 	padding-top:5px;
 	background-color:#000000;
-	width:15%;
+	width:20%;
+	max-width:220px;
 	height:85px;
 	float: right;
+}
+#warbandbox {
+	padding-top:5px;
+	background-color:#000000;
+	width:20%;
+	max-width:220px;
+	height:85px;
+	float: right;
+}
+#loginbutton {
+	position:relative;
+	margin-left:10px;
+	padding:3px;
+}
+#createbutton {
+	position:relative;
+	top:-40px;
+	right: -115px;
+	padding:3px;
+	margin:0px;
+}
+#logoutbutton {
+	position:relative;
+	top:-75px;
+	right: -125px;
+	padding:2px;
+	margin:0px;
 }
 #header1 {
 	background-color:#000000;
@@ -91,6 +111,13 @@ color: white;
 	font-size: 20px;
 	letter-spacing: 3px;
 }
+.main-container {
+	min-height: 100vh;
+	overflow: hidden;
+	display: block;
+	position: relative;
+	padding-bottom: 150px;
+}
 .leftcolumn { 
 	padding-left: 20px;
 	float: left;
@@ -110,7 +137,12 @@ color: white;
 	font-size:20px;
 	font-weight: bold;
 }
-
+.inputbox {
+	padding-bottom:5px;
+}
+.hide {
+	display:none;
+}
 @font-face {
   font-family: 'Starcraft Normal';
   src:  url('Starcraft Normal.woff2') format('woff2'),
