--- a/style.css
+++ b/style.css
@@ -14,28 +14,47 @@ footer {
 	width: 100%;
 	text-align: center;
 }
-li a {
-	float: left;
+#navigation ul {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+	background-color:#444;
+	overflow: hidden;
+	color:#33FFB4;
+	font-family: 'Starcraft Normal';
+	font-size: 20px;
+	letter-spacing: 3px;
+}
+
+#navigation li {
+float: left;
+margin: 0px;
+padding: 0px;
+
+}
+
+#navigation a {
 	display: block;
-	text-align: center;
-	padding: 10px 14px;
-	text-decoration: none;
-}
-
-li a:hover {
-background-color: #222;
-}
-
-a:link {
 color: white;
+	background-color:#444;
+padding: 10px 15px;
+text-decoration: none;
 }
 
-a:visited {
-color: white;
+#navigation a:hover {
+color: #d1d1d1;
+background-color:#373737;
 }
-#normallink {
-	
+
+#navigation #currentpage a {
+background: #999;
+color: #33FFB4;
+
 }
+#linksList {
+	list-style: none;
+}
+
 #banner {
 	background-color:#000000;
 	height:90px;
